--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #E6E6FA;
 
 }
 
@@ -16,7 +15,14 @@
     height: auto;
 }
 
+#tamagotchitoothless {
+  background-image: url("../images/image.svg");
+  display: inline-block;
+  height: 600px;
+  width: 600px;
+  background-size: contain;
 
+}
 
 body {
   text-align: center;
@@ -28,68 +34,50 @@ svg {
   align-content: flex-center;
 }
 
-#nightfury-toothless {
+.img-overlay-wrap {
+  position: relative;
+  display: inline-block; /* <= shrinks container to image size */
+  transition: transform 150ms ease-in-out;
 }
 
-.element-animation{
-  animation: animationFrames linear 4s;
-  animation-iteration-count: 1;
-  transform-origin: 50% 50%;
-  -webkit-animation: animationFrames linear 4s;
-  -webkit-animation-iteration-count: 1;
-  -webkit-transform-origin: 50% 50%;
-  -moz-animation: animationFrames linear 4s;
-  -moz-animation-iteration-count: 1;
-  -moz-transform-origin: 50% 50%;
-  -o-animation: animationFrames linear 4s;
-  -o-animation-iteration-count: 1;
-  -o-transform-origin: 50% 50%;
-  -ms-animation: animationFrames linear 4s;
-  -ms-animation-iteration-count: 1;
-  -ms-transform-origin: 50% 50%;
+.img-overlay-wrap img { 
+   display: block;
+   max-width: 100%;
+   height: auto;
 }
 
-@keyframes animationFrames{
-  0% {
-    transform:  translate(-4px,-15px)  rotate(0deg) ;
-  }
-  100% {
-    transform:  translate(200px,0px)  rotate(180deg) ;
-  }
+.img-overlay-wrap svg {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
-@-moz-keyframes animationFrames{
-  0% {
-    -moz-transform:  translate(-4px,-15px)  rotate(0deg) ;
-  }
-  100% {
-    -moz-transform:  translate(200px,0px)  rotate(180deg) ;
-  }
+.img-overlay-wrap:hover {
+  transform: rotate( 15deg );
 }
 
-@-webkit-keyframes animationFrames {
-  0% {
-    -webkit-transform:  translate(-4px,-15px)  rotate(0deg) ;
-  }
-  100% {
-    -webkit-transform:  translate(200px,0px)  rotate(180deg) ;
-  }
+
+
+svg {
+  background-color: lightgrey;
+}
+.color {
+   fill: blue;
 }
 
-@-o-keyframes animationFrames {
-  0% {
-    -o-transform:  translate(-4px,-15px)  rotate(0deg) ;
-  }
-  100% {
-    -o-transform:  translate(200px,0px)  rotate(180deg) ;
-  }
+.svg-plain {
+   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 96 43'><path class='color' d='M 55.584673,43.175632 36.75281,22.967243 0,43.175632 40.42403,0 59.71135,20.208389 96,0 Z' /></svg>");
 }
 
-@-ms-keyframes animationFrames {
-  0% {
-    -ms-transform:  translate(-4px,-15px)  rotate(0deg) ;
-  }
-  100% {
-    -ms-transform:  translate(200px,0px)  rotate(180deg) ;
-  }
+.svg-base64 {
+   background-image: url("data:image/")
+}
+
+.svg, svg {
+  width: 100px; 
+  height: 100px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: lightgrey;
+  margin: 5px;
 }
